Fixed issue with fixed position sidebar on mobile

--- a/public/css/siteaday.css
+++ b/public/css/siteaday.css
@@ -74,6 +74,7 @@ ul {
     .sidebar {
     background-image: url('../img/paris.png');
     height: 700px;
+    position: static;
     }
 }
 
